src/OpenCvSharp/Internal/Interop/NativeMethods.ObjDetect.Aruco.LibraryImport.cs


        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_get_chessboard_corners_fill")]
        internal static partial int ArucoCharucoBoardGetChessboardCornersFill(IntPtr board, Point3fNative* corners, int cornerCapacity, out int cornerCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_check_corners_collinear")]
        internal static partial int ArucoCharucoBoardCheckCornersCollinear(IntPtr board, int[] charucoIds, int charucoIdCount, out int collinear);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_check_corners_collinear")]
        internal static partial int ArucoCharucoBoardCheckCornersCollinear(IntPtr board, int* charucoIds, int charucoIdCount, out int collinear);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_board_generate_image")]
        internal static partial int ArucoCharucoBoardGenerateImage(IntPtr board, int width, int height, IntPtr image, int marginSize, int borderBits);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_detector_create")]
        internal static partial int ArucoCharucoDetectorCreate(IntPtr board, ref ArucoCharucoParamsNative charucoParameters, IntPtr cameraMatrix, IntPtr distCoeffs, ref ArucoDetectorParamsNative detectorParameters, ref ArucoRefineParamsNative refineParameters, out IntPtr detector);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_detector_release_handle")]
        internal static partial void ArucoCharucoDetectorReleaseHandle(IntPtr detector);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_detector_get_board")]
        internal static partial int ArucoCharucoDetectorGetBoard(IntPtr detector, out IntPtr board);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_detector_set_board")]
        internal static partial int ArucoCharucoDetectorSetBoard(IntPtr detector, IntPtr board);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_detector_get_charuco_parameters")]
        internal static partial int ArucoCharucoDetectorGetCharucoParameters(IntPtr detector, out ArucoCharucoParamsNative parameters, out IntPtr cameraMatrix, out IntPtr distCoeffs);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_detector_set_charuco_parameters")]
        internal static partial int ArucoCharucoDetectorSetCharucoParameters(IntPtr detector, ref ArucoCharucoParamsNative parameters, IntPtr cameraMatrix, IntPtr distCoeffs);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_detector_get_detector_parameters")]
        internal static partial int ArucoCharucoDetectorGetDetectorParameters(IntPtr detector, out ArucoDetectorParamsNative parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_detector_set_detector_parameters")]
        internal static partial int ArucoCharucoDetectorSetDetectorParameters(IntPtr detector, ref ArucoDetectorParamsNative parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_detector_get_refine_parameters")]
        internal static partial int ArucoCharucoDetectorGetRefineParameters(IntPtr detector, out ArucoRefineParamsNative parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_detector_set_refine_parameters")]
        internal static partial int ArucoCharucoDetectorSetRefineParameters(IntPtr detector, ref ArucoRefineParamsNative parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_detector_detect_board_count")]
        internal static partial int ArucoCharucoDetectorDetectBoardCount(IntPtr detector, IntPtr image, int* inputMarkerOffsets, int inputMarkerGroupCount, Point2fNative* inputMarkerPoints, int inputMarkerPointCount, int* inputMarkerIds, int inputMarkerIdCount, out int charucoCount, out int markerCount, out int markerPointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_detector_detect_board_fill")]
        internal static partial int ArucoCharucoDetectorDetectBoardFill(IntPtr detector, IntPtr image, int* inputMarkerOffsets, int inputMarkerGroupCount, Point2fNative* inputMarkerPoints, int inputMarkerPointCount, int* inputMarkerIds, int inputMarkerIdCount, Point2fNative* charucoCorners, int charucoCornerCapacity, int* charucoIds, int charucoIdCapacity, int* markerOffsets, int markerOffsetCapacity, Point2fNative* markerCorners, int markerCornerCapacity, int* markerIds, int markerIdCapacity, out int charucoCount, out int markerCount, out int markerPointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_detector_detect_diamonds_count")]
        internal static partial int ArucoCharucoDetectorDetectDiamondsCount(IntPtr detector, IntPtr image, int* inputMarkerOffsets, int inputMarkerCount, Point2fNative* inputMarkerPoints, int inputMarkerPointCount, int* inputMarkerIds, int inputMarkerIdCount, out int diamondCount, out int diamondPointCount, out int markerCount, out int markerPointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_detector_detect_diamonds_fill")]
        internal static partial int ArucoCharucoDetectorDetectDiamondsFill(IntPtr detector, IntPtr image, int* inputMarkerOffsets, int inputMarkerCount, Point2fNative* inputMarkerPoints, int inputMarkerPointCount, int* inputMarkerIds, int inputMarkerIdCount, int* diamondOffsets, int diamondOffsetCapacity, Point2fNative* diamondPoints, int diamondPointCapacity, int* diamondIds, int diamondIdCapacity, int* markerOffsets, int markerOffsetCapacity, Point2fNative* markerPoints, int markerPointCapacity, int* markerIds, int markerIdCapacity, out int diamondCount, out int diamondPointCount, out int markerCount, out int markerPointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_draw_detected_corners_charuco")]
        internal static partial int ArucoDrawDetectedCornersCharuco(IntPtr image, Point2fNative* corners, int cornerCount, int* ids, int idCount, double colorV0, double colorV1, double colorV2, double colorV3);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_draw_detected_diamonds")]
        internal static partial int ArucoDrawDetectedDiamonds(IntPtr image, int* diamondOffsets, int diamondCount, Point2fNative* diamondPoints, int diamondPointCount, int* diamondIds, int diamondIdCount, double colorV0, double colorV1, double colorV2, double colorV3);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_create")]
        internal static partial int MccCheckerCreate(out IntPtr checker);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_release_handle")]
        internal static partial void MccCheckerReleaseHandle(IntPtr checker);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_get_target")]
        internal static partial int MccCheckerGetTarget(IntPtr checker, out int target);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_set_target")]
        internal static partial int MccCheckerSetTarget(IntPtr checker, int target);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_get_box_count")]
        internal static partial int MccCheckerGetBoxCount(IntPtr checker, out int pointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_get_box_fill")]
        internal static partial int MccCheckerGetBoxFill(IntPtr checker, Point2fNative* points, int pointCapacity, out int pointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_set_box")]
        internal static partial int MccCheckerSetBox(IntPtr checker, Point2fNative* points, int pointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_get_color_charts_count")]
        internal static partial int MccCheckerGetColorChartsCount(IntPtr checker, out int pointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_get_color_charts_fill")]
        internal static partial int MccCheckerGetColorChartsFill(IntPtr checker, Point2fNative* points, int pointCapacity, out int pointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_get_charts_rgb")]
        internal static partial int MccCheckerGetChartsRgb(IntPtr checker, int getStats, out IntPtr chartsRgb);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_set_charts_rgb")]
        internal static partial int MccCheckerSetChartsRgb(IntPtr checker, IntPtr chartsRgb);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_get_charts_ycbcr")]
        internal static partial int MccCheckerGetChartsYCbCr(IntPtr checker, out IntPtr chartsYCbCr);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_set_charts_ycbcr")]
        internal static partial int MccCheckerSetChartsYCbCr(IntPtr checker, IntPtr chartsYCbCr);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_get_cost")]
        internal static partial int MccCheckerGetCost(IntPtr checker, out float cost);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_set_cost")]
        internal static partial int MccCheckerSetCost(IntPtr checker, float cost);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_get_center")]
        internal static partial int MccCheckerGetCenter(IntPtr checker, out Point2fNative center);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_set_center")]
        internal static partial int MccCheckerSetCenter(IntPtr checker, Point2fNative center);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_create")]
        internal static partial int MccCheckerDetectorCreate(out IntPtr detector);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_create_from_net")]
        internal static partial int MccCheckerDetectorCreateFromNet(IntPtr net, out IntPtr detector);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_release_handle")]
        internal static partial void MccCheckerDetectorReleaseHandle(IntPtr detector);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_process")]
        internal static partial int MccCheckerDetectorProcess(IntPtr detector, IntPtr image, int nc, out int detected);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_checker_detector_process_with_roi")]
        internal static partial int MccCheckerDetectorProcessWithRoi(IntPtr detector, IntPtr image, int[] rois, int roiCount, int nc, out int detected);
